// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkItemHeader renders component when fulfilled 1`] = `
<header
  className="case-study-header"
>
  <Row
    elementType="div"
    size="full"
  >
    <Column
      elementType="div"
      largeSize="12"
      scale="large"
      smallSize="12"
      style={Object {}}
    >
      <div
        className="case-study-titles"
      >
        <Text
          type="h1"
        >
          Foo
        </Text>
      </div>
    </Column>
    <Column
      elementType="div"
      largeSize="6"
      scale="large"
      smallSize="12"
      style={Object {}}
    >
      <Text
        type="h2"
      />
    </Column>
    <Column
      elementType="div"
      largeSize="8"
      scale="large"
      smallSize="12"
      style={Object {}}
    >
      <div
        className="padding padding-small"
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
    </Column>
  </Row>
</header>
`;

exports[`WorkItemHeader renders component when pending 1`] = `
<header
  className="case-study-header is-pending"
>
  <Row
    elementType="div"
    size="full"
  >
    <Column
      elementType="div"
      largeSize="12"
      scale="large"
      smallSize="12"
      style={Object {}}
    >
      <div
        className="case-study-titles"
      >
        <Text
          type="h1"
        />
      </div>
    </Column>
    <Column
      elementType="div"
      largeSize="6"
      scale="large"
      smallSize="12"
      style={Object {}}
    >
      <Text
        type="h2"
      />
    </Column>
    <Column
      elementType="div"
      largeSize="8"
      scale="large"
      smallSize="12"
      style={Object {}}
    >
      <div
        className="padding padding-small"
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
    </Column>
  </Row>
</header>
`;
